Sat Jun  7 10:13:31 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvaluatePositionCubeful4, EvaluatePositionFull):
	ensure nReductionGroup is reset to zero.
	(reported by Michael Depreli)

Fri Jun  6 12:43:47 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (ExposeQuadrant): ahem, fix small bug in
	index calculation.
	(bug 3873 reported by Ned Cross)

Fri Jun  6 12:21:14 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (SetMatchID): dump values for invalid match IDs.
	* matchid.c (MatchFromKey): no crawford game for money play
	(reported by Rod Roark)

Fri Jun  6 11:49:40 2003  Joern Thyssen  <jth@gnubg.org>

	* analysis.c (updateStatcontext): change the way anTotalMoves
	is calculated.
	(reported by Rolf Nielsen)

Fri Jun  6 11:19:58 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): modify formulaes for snowie error
	rate according to Chris Yep's email.

Tue Jun  3 09:20:00 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* eval.c: fix compilation with -DGARY_CACHE

Mon Jun  2 23:19:22 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (GTKShowTempMap): remove gtk_aspect_frame for now.

Mon Jun  2 23:11:02 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (UpdateMapEquities): show best move in tool tip.

Mon Jun  2 22:32:28 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (ExposeDie, GTKShowTempMap): dynamic resizing of
	dice.

Mon Jun 02 17:11:48 2003  Holger Bochnig <hbgg@gmx.net>

        * gtktempmap.c (ExposeDie): bug fix: after a resize artefacts
          of the old dice remained

Sun Jun  1 22:39:24 2003  Joern Thyssen  <jth@gnubg.org>

	Several improvements to temp. maps.

	* gtktempmap.c: several improvements.

Sun Jun  1 13:04:08 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (CalTempMapEquities): invert fMove before
	call to evaluation.
	* eval.c: replace "default" move filter with "normal" movefilter.